clutter: Plug evdev ClutterDeviceManager leaks

The unused ID GList element is leaked, and so is the node path.

https://bugzilla.gnome.org/show_bug.cgi?id=789984